@@ -1,4 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
+PL-node-v0.10.1
+ - ADD: Added more unit tests for recently more-modular code
+ - FIX: Lineage was not working for patterns with pattern parameters
+
 PL-node-v0.10.0
  - ADD: Added support for pattern parameters! Resolves #88
  - FIX: Data inheritance is now working as advertised. Resolves #127. This turned out to be a MAJOR thing, as I realized the home-page was not passing down any of its json data to partials.
@@ -7,7 +11,8 @@ PL-node-v0.10.0
  - ADD: Added a new comment organism, the sticky comment, to ship an example of pattern parameters
  - CHG: Start some JS linting of the project. I don't quite agree with a lot of it, so am trying to set some smart configurations
  - CHG: Wrapped some build messages in the patternlab.config.debug flag
- - FIX: Allow users to set a base url path. Resolves #125 ([)testing in the while requested)
+ - FIX: Allow users to set a base url path. Resolves #125 (testing in the wild requested)
+ - THX: Thanks @scottnath for the proposed base url solution and @jkbyln for discussion on the topic too!
 
 PL-node-v0.9.1
  - FIX: Fixed an issue with view all navigation not checking for index out of bounds cases
